Added price prototype. does not work.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
           <p>What Size?</p>
           <div class="radio">
           <label>
-          <input type="radio" name="size" value="12" checked> Meduim $12
+          <input type="radio" name="size" value="medium" checked> Meduim $12
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="size" value="15"> Large $15
+          <input type="radio" name="size" value="large"> Large $15
         </label>
         </div>
         </div>
         <div class="form-group">
-          <p>Add any of these vegetables $1.50 on a Meduim or $2 on a Large:</p>
+          <p>Add any of these vegetables $2 on a Meduim or $3 on a Large:</p>
           <input type="checkbox" name="veggie" value="olives"> Olives<br>
           <input type="checkbox" name="veggie" value="peppers"> Peppers<br>
           <input type="checkbox" name="veggie" value="onions"> Onions<br>
