--- a/index.html
+++ b/index.html
@@ -28,33 +28,37 @@
         </div>
         <div class="form-group">
           <p>Add any of these vegetables $2 on a Meduim or $3 on a Large:</p>
-          <input type="checkbox" name="veggie" value="olives"> Olives<br>
-          <input type="checkbox" name="veggie" value="peppers"> Peppers<br>
-          <input type="checkbox" name="veggie" value="onions"> Onions<br>
-          <input type="checkbox" name="veggie" value="pineapple"> Pineapple<br>
-          <input type="checkbox" name="veggie" value="mushrooms"> Mushrooms<br>
-          <input type="checkbox" name="veggie" value="jalapenos"> Jalapenos<br>
-          <input type="checkbox" name="veggie" value="artichoke"> Artichoke Hearts<br>
-          <input type="checkbox" name="veggie" value="sundried-tomato"> Sundried Tomatoes<br>
-          <input type="checkbox" name="veggie" value="zucchini"> Zucchini<br>
-          <input type="checkbox" name="veggie" value="roasted-garlic"> Roasted garlic<br>
-          <input type="checkbox" name="veggie" value="seasonal"> Special Seasonal<br>
+          <input type="checkbox" name="topping" value="olives"> Olives<br>
+          <input type="checkbox" name="topping" value="peppers"> Peppers<br>
+          <input type="checkbox" name="topping" value="onions"> Onions<br>
+          <input type="checkbox" name="topping" value="pineapple"> Pineapple<br>
+          <input type="checkbox" name="topping" value="mushrooms"> Mushrooms<br>
+          <input type="checkbox" name="topping" value="jalapenos"> Jalapenos<br>
+          <input type="checkbox" name="topping" value="artichoke"> Artichoke Hearts<br>
+          <input type="checkbox" name="topping" value="sundried-tomato"> Sundried Tomatoes<br>
+          <input type="checkbox" name="topping" value="zucchini"> Zucchini<br>
+          <input type="checkbox" name="topping" value="roasted-garlic"> Roasted garlic<br>
+          <input type="checkbox" name="topping" value="seasonal"> Special Seasonal<br>
         </div>
         <div class="form-group">
           <p>Add some Meat! $2 on a Medium, $3 on a Large:</p>
-          <input type="checkbox" name="meat" value="pepperoni"> Pepperoni<br>
-          <input type="checkbox" name="meat" value="salami"> Salami<br>
-          <input type="checkbox" name="meat" value="sausage"> Sausage<br>
-          <input type="checkbox" name="meat" value="ham"> Ham<br>
-          <input type="checkbox" name="meat" value="bacon"> Bacon<br>
-          <input type="checkbox" name="meat" value="special"> Special<br>
+          <input type="checkbox" name="topping" value="pepperoni"> Pepperoni<br>
+          <input type="checkbox" name="topping" value="salami"> Salami<br>
+          <input type="checkbox" name="topping" value="sausage"> Sausage<br>
+          <input type="checkbox" name="topping" value="ham"> Ham<br>
+          <input type="checkbox" name="topping" value="bacon"> Bacon<br>
+          <input type="checkbox" name="topping" value="special"> Special<br>
         </div>
        <button type="submit">Place Order</button>
       </form>
-      <span id="pizza-order">
+      <div id="pizza-order">
         <p><b>You Ordered:</b></p>
-      </span>
+        <span id = "pizza-size"></span>
       <br>
+      <span id = "description"></span>
+      <br>
+      <span id = "order-total"></span>
+    </div>
 
     </div>
   </body>
