--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         </div>
         <div class="form-group">
-          <p>Add any of these vegetables $2 on a Meduim or $3 on a Large:</p>
+          <p>Add some vegetables!:</p>
           <input type="checkbox" name="topping" value="olives"> Olives<br>
           <input type="checkbox" name="topping" value="peppers"> Peppers<br>
           <input type="checkbox" name="topping" value="onions"> Onions<br>
@@ -41,7 +41,7 @@
           <input type="checkbox" name="topping" value="seasonal"> Special Seasonal<br>
         </div>
         <div class="form-group">
-          <p>Add some Meat! $2 on a Medium, $3 on a Large:</p>
+          <p>Add some Meat!:</p>
           <input type="checkbox" name="topping" value="pepperoni"> Pepperoni<br>
           <input type="checkbox" name="topping" value="salami"> Salami<br>
           <input type="checkbox" name="topping" value="sausage"> Sausage<br>
@@ -53,11 +53,12 @@
       </form>
       <div id="pizza-order">
         <p><b>You Ordered:</b></p>
-        <span id = "pizza-size"></span>
-      <br>
-      <span id = "description"></span>
-      <br>
-      <span id = "order-total"></span>
+        <ul id="detail">
+
+        <li> A  <span id = "pizza-size"></span> pizza</li>
+        <li> with <span id = "description"></span></li>
+        <li><span id = "order-total"></span></li>
+    </ul>
     </div>
 
     </div>
