--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   </head>
   <body>
     <div class="container">
+      <div class="row">
+
       <div class="jumbotron">
         <h2>Pizza Place</h2>
       </div>
+    </div>
+
+      <div class="row">
+
       <form id="build-your-own">
         <div class="form-group">
           <p>What Size?</p>
@@ -26,6 +32,10 @@
         </label>
         </div>
         </div>
+      </div>
+      <div class="row">
+
+        <div class="col-md-6">
         <div class="form-group">
           <p>Add some vegetables!:</p>
           <input type="checkbox" name="topping" value="olives"> Olives<br>
@@ -40,6 +50,9 @@
           <input type="checkbox" name="topping" value="roasted-garlic"> Roasted garlic<br>
           <input type="checkbox" name="topping" value="seasonal"> Special Seasonal<br>
         </div>
+        </div>
+
+        <div class="col-md-6">
         <div class="form-group">
           <p>Add some Meat!:</p>
           <input type="checkbox" name="topping" value="pepperoni"> Pepperoni<br>
@@ -49,6 +62,10 @@
           <input type="checkbox" name="topping" value="bacon"> Bacon<br>
           <input type="checkbox" name="topping" value="special"> Special<br>
         </div>
+      </div>
+      </div>
+      <div class="row">
+
        <button type="submit">Place Order</button>
       </form>
       <div id="pizza-order">
@@ -57,8 +74,9 @@
 
         <li> A  <span id = "pizza-size"></span> pizza</li>
         <li> with <span id = "description"></span></li>
-        <li><span id = "order-total"></span></li>
+        <li>$ <span id = "order-total"></span></li>
     </ul>
+  </div>
     </div>
 
     </div>
