--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="size" value="large" checked> Large $15
+          <input type="radio" name="size" value="large"> Large $15
         </label>
         </div>
         </div>
